--- a/_includes/sns-links.html
+++ b/_includes/sns-links.html
@@ -60,7 +60,7 @@
   {% endif %}
   {% if site.github_username %}
   <li>
-    <a target="_blank" href="https://github.com">
+    <a target="_blank" href="https://github.com/Smile-O">
       <span class="fa-stack fa-lg">
         <i class="fa fa-circle fa-stack-2x"></i>
         <i class="fa fa-github fa-stack-1x fa-inverse"></i>
